# MyHandyAI

./: .gitignore  AI architecture.drawio  App flow diiagram.drawio  README.md  myhandyai_poc.py
Backend/: .env  .gitignore  README.md  agents.py  chat.js  create_etl_embeddings.py  db.py  diy_assistant.py  env  main.py  package.json  pyproject.toml  requirements.txt
Backend/chatbot/: README.md  __init__.py  agents.py  grok_chatbot.py  langagents.py  planner.py  smart_questions.py  step_guidance_chatbot.py  step_guidance_chatbot_legacy.py  test_smart_questions.py
Backend/config/: settings.py
Backend/content_generation/: planner.py  tools.py  utils.py
Backend/database/: llm_consumption.py  mongodb.py  qdrant.py
Backend/information_gathering_agent/: README.md  dependencies.py
Backend/legacy_modules/: chat.js
Backend/prompts/: chat2_execution_guidance_prompt.txt  chat2_intent_detection_prompt.txt  chat2_safety_prompt.txt  chat2_step_instruction_prompt.txt  chat2_tool_guidance_prompt.txt  chat_problem_recognition_prompt.txt  chat_qa_prompt.txt  chat_revision_request_prompt.txt  chat_skip_image_prompt.txt  chat_valid_description_prompt.txt  generation_fallback_tools_prompt.txt  generation_steps_prompt.txt  generation_tools_prompt.txt  qa_prompt.txt  steps_prompt.txt
Backend/routes/: auth.py  authentication.py  chat.py  chatbot.py  embeddings.py  feedback.py  generation.py  information_gathering_agent.py  langbot.py  llm_consumption.py  logs.py  project.py  project_assistant_agent.py  step_guidance.py  steps.py  tool_detection.py  tool_detection_demo.py  user.py  (+1 more)
(+229 files in other folders)
